--- a/DevCon19/DevCon19.Web/wwwroot/index.html
+++ b/DevCon19/DevCon19.Web/wwwroot/index.html
@@ -1,16 +1,22 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>DevCon19.Web</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="css/weather.css" rel="stylesheet" />
+    <link href="manifest.json" rel="manifest" >
+    <!--<script src="_content/AspNetMonsters.Blazor.Geolocation/Location.js"></script>-->
 </head>
 <body>
     <app>Loading...</app>
 
     <script src="_framework/blazor.webassembly.js"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('service-worker.js');
+        }
+    </script>
 </body>
 </html>
